--- a/web/src/app/features/about-us/components/about-us-banner/about-us-banner.component.html
+++ b/web/src/app/features/about-us/components/about-us-banner/about-us-banner.component.html
@@ -1,3 +1,3 @@
-<div class="main-container">
-    <h1>ABOUT US</h1>
+<div class="main-container" *ngIf="bannerData">
+    <h1>{{bannerData[0]?.title | uppercase}}</h1>
 </div>
