--- a/web/src/app/features/about-us/components/about/about.component.html
+++ b/web/src/app/features/about-us/components/about/about.component.html
@@ -1,24 +1,15 @@
-<div class="main-container py-5">
+<div class="main-container my-5 pb-5" *ngIf="aboutData">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-xl-6 col-sm-12 col-md-6 content1">
+            <div class="col-lg-5 col-xl-5 col-sm-12 col-md-6 content1">
                 <div class="img-wrapper">
-                    <img class="image-back img-fluid" src="assets/images/about/founder02.jpg" alt="about-img">
-                    <img class="image-front img-fluid" src="assets/images/about/STEEL-Image-3.png" alt="about-img">
+                    <img class="image-back img-fluid" src="{{aboutData[0]?.imageTwoUrl}}" alt="about-img">
+                    <img class="image-front img-fluid" src="{{aboutData[0]?.imageUrl}}" alt="about-img">
                 </div>
             </div>
-            <div class="col-lg-6 col-xl-6 col-sm-12 col-md-6">
-                <h3 class="mb-4">ABOUT TURBOSTEEL</h3>
-                <p>Turbosteel is a brand promoted by Prakash Sponge Iron and Power Private Limited (PSIPL). PSIPL located at Heggere & Kaparahalli villages in Challakere taluk of Chitradurga district, Karnataka manufactures high grade mild steel.
-
-                    PSIPL also produces the sponge iron required for steel making. As forward integration, we use induction furnaces and superior equipment such as MSS convertor and LRF(Ladle refining furnace) to produce high quality liquid steel. This is then cast by continuous casting machine to produce Low Phosphorous Sulphur(LPS) Mild Steel billets and now recently into steel re-bars.
-                    
-                    PSIPL is a subsidiary of EMRgroup, which has more than 4 decades of experience in the field of Iron ore, manganese mining and stee</p>
-
-                    <h6><strong>ERM GROUP OF COMPANIES</strong></h6>
-                    <ul>
-                        <li> <img class="img-icon" src="assets/icons/greater-than.svg" alt="greater-than">Iron Ore Mining Division</li>
-                    </ul>
+            <div class="col-lg-7 col-xl-7 col-sm-12 col-md-6">
+                <h2 class="mb-4">{{aboutData[0]?.title}}</h2>
+                <p [innerHtml]="safedesc"></p>
             </div>
         </div>
     </div>
