--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="component-wrapper">
+  <app-loader></app-loader>
   <app-header></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
