--- a/web/src/app/features/about/components/csr/csr.component.html
+++ b/web/src/app/features/about/components/csr/csr.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="csrBannerData">
+<div class="banner-container" *ngIf="csrBannerData">
     <img class="img-fluid" [src]="csrBannerData[0]?.imageUrl" alt="csr-img">
 </div>
 <div class="csr-container py-5" *ngIf="csrCategoryData">
