--- a/web/src/app/features/about/components/erm-overview/erm-overview.component.html
+++ b/web/src/app/features/about/components/erm-overview/erm-overview.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="overviewBannerData">
+<div class="banner-container" *ngIf="overviewBannerData">
     <img class="img-fluid" [src]="overviewBannerData[0]?.imageUrl" alt="overview-img">
 </div>
 
