--- a/web/src/app/features/about/components/media/media.component.html
+++ b/web/src/app/features/about/components/media/media.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="mediaBannerData">
+<div class="banner-container" *ngIf="mediaBannerData">
     <img class="img-fluid" [src]="mediaBannerData[0]?.imageUrl" alt="media-img">
 </div>
 
@@ -7,7 +7,7 @@
         <div class="row justify-content-center">
             <div class="col-xl-10 col-lg-10 col-sm-12 col-md-10 mx-auto">
                 <div class="tabs-heading">
-                    <p class="text-center" *ngFor="let item of mediaData">
+                    <p class="text-center my-2" *ngFor="let item of mediaData">
                         <span [ngClass]="{'active-tab' : selectedTabId === item.url}"
                             (click)="onClickTabHead(item.url)">{{item.title | uppercase}}</span>
                     </p>
