--- a/web/src/app/features/careers/careers.component.html
+++ b/web/src/app/features/careers/careers.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="careerBannerData">
+<div class="banner-container" *ngIf="careerBannerData">
     <img class="img-fluid" [src]="careerBannerData[0]?.imageUrl" alt="career-banner">
 </div>
 
