--- a/web/src/app/features/contact/components/contact-form/contact-form.component.scss
+++ b/web/src/app/features/contact/components/contact-form/contact-form.component.scss
@@ -79,11 +79,11 @@ small {
         display: block;
     }
 
-    .form-content .form-input {
+    .form-content>div {
         width: auto;
     }
 
-    textarea {
-        width: 85%;
-    }
+    // textarea {
+    //     width: 85%;
+    // }
 }
