--- a/web/src/app/features/home/components/manufacturing-process/manufacturing-process.component.html
+++ b/web/src/app/features/home/components/manufacturing-process/manufacturing-process.component.html
@@ -10,7 +10,7 @@
                         <p>{{item.description}}</p>
                     </div>
                     <div class="text-center">
-                        <button class="button">Read More</button>
+                       <a href="{{item.url}}"> <button class="button">Read More</button></a>
                     </div>
                 </div>
             </div>
