--- a/web/src/app/features/home/components/product-options/product-options.component.html
+++ b/web/src/app/features/home/components/product-options/product-options.component.html
@@ -8,7 +8,7 @@
                         <h4><strong>{{item.title}}</strong></h4>
                         <p>{{item.description}}</p>
                     </div>
-                    <a href="{{item.url}}"> <button class="button"><strong>READ MORE</strong></button></a>
+                    <a href="products/{{item.url}}"> <button class="button"><strong>READ MORE</strong></button></a>
                 </div>
             </div>
         </div>
