--- a/web/src/app/features/registration/components/architects-engineers/architects-engineers.component.scss
+++ b/web/src/app/features/registration/components/architects-engineers/architects-engineers.component.scss
@@ -81,6 +81,9 @@ small {
 }
 
 @media (max-width: 767px) {
+    h2{
+        font-size: 30px;
+    }
     .form-uploads {
         display: block;
     }
