--- a/web/src/app/features/why-turbosteel/components/advantages/advantages.component.html
+++ b/web/src/app/features/why-turbosteel/components/advantages/advantages.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="advantagesBannerData">
+<div class="banner-container" *ngIf="advantagesBannerData">
     <img class="img-fluid" [src]="advantagesBannerData[0]?.imageUrl" alt="mission">
 </div>
 
