--- a/web/src/app/features/why-turbosteel/components/inhouse-laboratory/inhouse-laboratory.component.scss
+++ b/web/src/app/features/why-turbosteel/components/inhouse-laboratory/inhouse-laboratory.component.scss
@@ -1,6 +1,16 @@
-.safehtml{
+.safehtml {
     border: 1px solid #74C7FF;
     background: #F4FBFF;
     border-radius: 20px;
     padding: 3%;
+}
+
+.banner-container img {
+    width: 100%;
+}
+
+@media (max-width: 767px) {
+    .safehtml {
+        overflow-x: auto;
+    }
 }
