--- a/web/src/app/features/why-turbosteel/components/manufacturing-process/manufacturing-process.component.html
+++ b/web/src/app/features/why-turbosteel/components/manufacturing-process/manufacturing-process.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="manufactureBannerData">
+<div class="banner-container" *ngIf="manufactureBannerData">
     <img class="img-fluid" [src]="manufactureBannerData[0]?.imageUrl" alt="mission">
 </div>
 <div class="manufacture-container py-5" *ngIf="manufactureData">
