--- a/web/src/app/features/why-turbosteel/components/manufacturing-process/manufacturing-process.component.scss
+++ b/web/src/app/features/why-turbosteel/components/manufacturing-process/manufacturing-process.component.scss
@@ -1,3 +1,7 @@
+.banner-container img {
+    width: 100%;
+}
+
 h2 {
     font-size: 42px;
     font-weight: 900;
@@ -8,18 +12,27 @@ h2 {
     text-transform: uppercase;
 }
 
-.content{
+.content {
     height: 90vh;
     overflow: auto;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 20px;
 }
-.line{
+
+.line {
     border-bottom: 1px solid var(--ts-accent-color2);
 }
-.line1{
+
+.line1 {
     border-bottom: 1.4px solid rgba(48, 56, 73, .2);
 }
-.content p{
+
+.content p {
     font-size: 13px;
+}
+
+@media (max-width: 767px) {
+    h2 {
+        font-size: 28px;
+    }
 }
