--- a/web/src/app/features/why-turbosteel/components/product-feature/product-feature.component.html
+++ b/web/src/app/features/why-turbosteel/components/product-feature/product-feature.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="featureBannerData">
+<div class="banner-container" *ngIf="featureBannerData">
     <img class="img-fluid" [src]="featureBannerData[0]?.imageUrl" alt="product-feature-banner">
 </div>
 
