--- a/web/src/app/common/header/header.component.html
+++ b/web/src/app/common/header/header.component.html
@@ -1,7 +1,9 @@
 <header>
     <div class="res">
         <a routerLink="/home"><img src="assets/images/logo.jpg" class="logo" alt="logo"></a>
-        <a class="menu"><img src="assets/icons/hamberger-menu.svg" alt="hamberger" /></a>
+        <a class="menu" (click)="openSidenav()">
+            <img src="assets/icons/hamberger-menu.svg" alt="hamburger" />
+        </a>
     </div>
     <div class="main-nav">
         <div class="first-nav">
@@ -9,13 +11,13 @@
         </div>
         <div class="sidenav">
             <ul>
-                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown()">
-                    <a routerLinkActive="active" routerLink="/about-us"
-                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown()">
+                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown('about')">
+                    <a routerLinkActive="active"
+                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown('about')">
                         About Us
                         <!-- <img class="chevron-img ms-2" src="assets/images/icons/chevron.svg" alt=""> -->
                     </a>
-                    <div class="dropdown" *ngIf="isDropdownOpen">
+                    <div class="dropdown" *ngIf="openedDropdown === 'about'">
                         <div class="dropdown-container">
                             <div *ngFor="let data of aboutData" class="dropdown-item">
                                 <a routerLinkActive="active" [routerLink]="['/about', data?.url || '']"
@@ -28,13 +30,13 @@
                     </div>
 
                 </li>
-                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown()">
-                    <a routerLinkActive="active"
-                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown()">
+                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown('why-turbosteel')">
+                    <a routerLinkActive="active" class="dropdown-trigger d-flex align-items-center px-2"
+                        (click)="toggleDropdown('why-turbosteel')">
                         Why Turbosteel
                         <!-- <img class="chevron-img ms-2" src="assets/images/icons/chevron.svg" alt=""> -->
                     </a>
-                    <div class="dropdown" *ngIf="isDropdownOpen">
+                    <div class="dropdown" *ngIf="openedDropdown === 'why-turbosteel'">
                         <div class="dropdown-container">
                             <div *ngFor="let data of turbosteelData" class="dropdown-item">
                                 <a routerLinkActive="active" [routerLink]="['/why-turbosteel', data?.url || '']"
@@ -47,13 +49,13 @@
                     </div>
 
                 </li>
-                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown()">
-                    <a routerLinkActive="active" routerLink="/products"
-                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown()"> Our
+                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown('products')">
+                    <a routerLinkActive="active"
+                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown('products')"> Our
                         Products
                         <!-- <img class="chevron-img ms-2" src="assets/images/icons/chevron.svg" alt=""> -->
                     </a>
-                    <div class="dropdown" *ngIf="isDropdownOpen">
+                    <div class="dropdown" *ngIf="openedDropdown === 'products'">
                         <div class="dropdown-container">
                             <div *ngFor="let data of productData" class="dropdown-item">
                                 <a routerLinkActive="active" [routerLink]="['/products', data?.productUrlId || '']"
@@ -66,13 +68,13 @@
                     </div>
 
                 </li>
-                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown()">
-                    <a routerLinkActive="active" routerLink="/facilities"
-                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown()"> Facilities
+                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown('facilities')">
+                    <a routerLinkActive="active"
+                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown('facilities')"> Facilities
                     </a>
-                    <div class="dropdown" *ngIf="isDropdownOpen">
+                    <div class="dropdown" *ngIf="openedDropdown === 'facilities'">
                         <div class="dropdown-container">
-                            <div  class="dropdown-item" *ngFor="let data of facilityCategoryData">
+                            <div class="dropdown-item" *ngFor="let data of facilityCategoryData">
                                 <a routerLinkActive="active" [routerLink]="['/facilities', data?.url || '']"
                                     (click)="closeDropdown()">
                                     <p class="mb-1"> <strong>{{ data?.title || 'Unnamed' }}</strong></p>
@@ -82,17 +84,16 @@
                         </div>
                     </div>
                 </li>
-                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown()">
+                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown('buy')">
                     <a routerLinkActive="active" routerLink="/buy"
-                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown()">
+                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown('buy')">
                         Buy
                         <!-- <img class="chevron-img ms-2" src="assets/images/icons/chevron.svg" alt=""> -->
                     </a>
-                    <div class="dropdown" *ngIf="isDropdownOpen">
+                    <div class="dropdown" *ngIf="openedDropdown === 'buy'">
                         <div class="dropdown-container">
                             <div class="dropdown-item">
-                                <a routerLinkActive="active" routerLink="/buy"
-                                    (click)="closeDropdown()">
+                                <a routerLinkActive="active" routerLink="/buy" (click)="closeDropdown()">
                                     <p class="mb-1"> <strong>Buy TMT</strong></p>
                                     <p class="mb-0"> Premium TMT bars, strong, reliable</p>
                                 </a>
@@ -101,13 +102,13 @@
                     </div>
 
                 </li>
-                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown()">
-                    <a routerLinkActive="active" routerLink="/registration"
-                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown()">
+                <li class="navbar" (mouseleave)="closeDropdown()" (mouseenter)="openDropdown('registration')">
+                    <a routerLinkActive="active"
+                        class="dropdown-trigger d-flex align-items-center px-2" (click)="toggleDropdown('registration')">
                         Registration
                         <!-- <img class="chevron-img ms-2" src="assets/images/icons/chevron.svg" alt=""> -->
                     </a>
-                    <div class="dropdown" *ngIf="isDropdownOpen">
+                    <div class="dropdown" *ngIf="openedDropdown === 'registration'">
                         <div class="dropdown-container">
                             <div *ngFor="let data of registrationData" class="dropdown-item">
                                 <a routerLinkActive="active" [routerLink]="['/registration', data?.url || '']"
