--- a/web/src/app/features/about-us/components/gallery/gallery.component.scss
+++ b/web/src/app/features/about-us/components/gallery/gallery.component.scss
@@ -25,8 +25,11 @@ h5 {
     gap: 20px;
 }
 
-// img {
-//     width: 100%;
-//     border-radius: 10px;
-//     display: block;
-// }
+@media (max-width: 650px) {
+    .custom-grid{
+        display: block;
+    }
+    img{
+        margin: 8px 0;
+    }
+}
