--- a/web/src/app/features/about-us/components/statistics/statistics.component.scss
+++ b/web/src/app/features/about-us/components/statistics/statistics.component.scss
@@ -10,14 +10,45 @@
 
 .content {
     display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
     text-align: center;
     color: var(--ts-accent-color1);
     padding: 70px 0;
 }
 
-h1,
-p {
+.content-flex {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+h1 {
     font-weight: 600;
+}
+
+.line {
+    border-right: 1px solid var(--ts-accent-color1);
+    height: 100%;
+    width: 1px;
+}
+
+@media (max-width: 650px) {
+    .content {
+        justify-content: center;
+        flex-direction: column;
+        padding: 40px 0;
+    }
+
+    .content-flex {
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    .line {
+        border-bottom: 1px solid var(--ts-accent-color1);
+        height: 1px;
+        width: 200px;
+    }
 }
