--- a/web/src/app/features/about/components/chairman-message/chairman-message.component.html
+++ b/web/src/app/features/about/components/chairman-message/chairman-message.component.html
@@ -1,15 +1,15 @@
-<div class="main-container" *ngIf="messageBannerData">
+<div class="banner-container" *ngIf="messageBannerData">
     <img class="img-fluid" [src]="messageBannerData[0]?.imageUrl" alt="banner-img">
 </div>
 
 <div class="message-container py-5" *ngIf="messageData">
     <div class="container">
-        <div class="row align-items-center">
+        <div class="row">
             <h4 class="text-center mb-4">{{messageData[0]?.title | uppercase}}</h4>
-            <div class="col-xl-3 col-lg-3 col-sm-12 col-md-3">
+            <div class="col-xl-3 col-lg-3 col-sm-12 col-md-4">
                 <img class="img-fluid" [src]="messageData[0]?.imageUrl" alt="md-img">
             </div>
-            <div class="col-xl-9 col-lg-9 col-sm-12 col-md-9">
+            <div class="col-xl-9 col-lg-9 col-sm-12 col-md-8">
                 <p [innerHtml]="safeDesc"> </p>
             </div>
         </div>
