--- a/web/src/app/features/about/components/mission-vision/mission-vision.component.html
+++ b/web/src/app/features/about/components/mission-vision/mission-vision.component.html
@@ -1,8 +1,8 @@
-<div class="main-container" *ngIf="visionBannerData">
+<div class="banner-container" *ngIf="visionBannerData">
     <img class="img-fluid" [src]="visionBannerData[0]?.imageUrl" alt="mission">
 </div>
 
-<div class="mission-container py-5 mb-5" *ngIf="visionData">
+<div class="mission-container py-5 mb-4" *ngIf="visionData">
     <div class="container">
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-sm-12 col-md-4" *ngFor="let item of visionData">
