--- a/web/src/app/features/about/components/mission-vision/mission-vision.component.scss
+++ b/web/src/app/features/about/components/mission-vision/mission-vision.component.scss
@@ -1,3 +1,7 @@
+
+.banner-container img {
+    width: 100%;
+}
 .content {
     display: flex;
     flex-direction: column;
@@ -5,6 +9,7 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.18);
     padding: 20px;
     border-radius: 6px;
+    margin: 10px 5px;
 }
 
 button {
