--- a/web/src/app/features/careers/careers.component.scss
+++ b/web/src/app/features/careers/careers.component.scss
@@ -1,17 +1,24 @@
-.button{
+.banner-container img {
+    width: 100%;
+}
+
+.button {
     border-radius: 4px;
 }
-.button:hover{
+
+.button:hover {
     background-color: var(--ts-primary-color);
 }
-.career-item{
+
+.career-item {
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 15px 10px;
     padding: 20px;
 }
-p{
+
+p {
     color: #7d7c7c;
     font-size: 14px;
 }
