--- a/web/src/app/features/facilities/facilities.component.html
+++ b/web/src/app/features/facilities/facilities.component.html
@@ -1,15 +1,15 @@
-<div class="main-container" *ngIf="data">
+<div class="banner-container" *ngIf="data">
     <img class="img-fluid" [src]="data.imageUrl" alt="banner-img">
 </div>
 
 <div class="main-container py-5" *ngIf="facilityDetailData">
     <div class="container">
         <div class="row">
-            <div class="content">
+            <div class="content" *ngIf="facilityDetailData.imageUrl || facilityDetailData.imageTwoUrl" >
                 <img class="product-img" *ngIf="facilityDetailData.imageUrl" [src]="facilityDetailData.imageUrl" alt="facilty-img">
                 <img class="product-img" *ngIf="facilityDetailData.imageTwoUrl" [src]="facilityDetailData.imageTwoUrl" alt="facilty-img">
             </div>
-            <div>
+            <div *ngIf="facilityDesc">
                 <p [innerHtml]="facilityDesc"></p>
             </div>
         </div>
