--- a/web/src/app/features/facilities/facilities.component.scss
+++ b/web/src/app/features/facilities/facilities.component.scss
@@ -1,8 +1,30 @@
-.content{
+.banner-container img {
+    width: 100%;
+}
+
+.content {
     display: flex;
     justify-content: center;
 }
-.product-img{
+
+.product-img {
     width: 450px;
     margin: 10px;
+}
+
+@media(max-width: 767px) {
+    .content {
+        display: block;
+    }
+
+    .product-img {
+        width: 100%;
+        margin: 10px 0;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .product-img {
+        width: 350px;
+    }
 }
