--- a/web/src/app/features/home/components/manufacturing-process/manufacturing-process.component.scss
+++ b/web/src/app/features/home/components/manufacturing-process/manufacturing-process.component.scss
@@ -41,6 +41,20 @@ p {
 h6 {
     min-height: 76px;
 }
-button{
+
+button {
     font-size: 15px;
+}
+
+@media (max-width: 600px) {
+    h2 {
+        font-size: 26px;
+    }
+}
+
+@media (max-width: 767px) {
+    img {
+        height: auto;
+        width: 100%;
+    }
 }
