--- a/web/src/app/features/products/products.component.html
+++ b/web/src/app/features/products/products.component.html
@@ -9,7 +9,7 @@
                 <div *ngIf="productDetailData.imageUrl">
                     <img class="product-img" [src]="productDetailData.imageUrl" alt="product">
                 </div>
-                <div class="ms-3 main-content">
+                <div class="main-content">
                     <p [innerHtml]="safeProductDesc"></p>
                 </div>
             </div>
