--- a/web/src/app/features/why-turbosteel/components/certification/certification.component.html
+++ b/web/src/app/features/why-turbosteel/components/certification/certification.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="certificationBannerData">
+<div class="banner-container" *ngIf="certificationBannerData">
     <img class="img-fluid" [src]="certificationBannerData[0]?.imageUrl" alt="certification-banner">
 </div>
 
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="tabs">
-                <ul>
+                <ul class="ps-0">
                     <li [ngClass]="{'active-tab' : selectedUrl === item.url}" *ngFor="let item of certificationCategoryData" (click)="onClickCategory(item.url)">
                         {{item.title | uppercase}}
                     </li>
