--- a/web/src/app/features/why-turbosteel/components/product-feature/product-feature.component.scss
+++ b/web/src/app/features/why-turbosteel/components/product-feature/product-feature.component.scss
@@ -1,6 +1,14 @@
-.container{
+.banner-container img {
+    width: 100%;
+}
+
+.container {
     border: 1px solid #74C7FF;
     background: #F4FBFF;
     border-radius: 20px;
     padding: 3%;
+}
+
+p {
+    overflow: auto;
 }
