--- a/web/src/app/features/about/components/csr/csr.component.scss
+++ b/web/src/app/features/about/components/csr/csr.component.scss
@@ -1,6 +1,7 @@
 .banner-container img {
     width: 100%;
 }
+
 .tab-heading {
     display: flex;
     justify-content: center;
@@ -16,36 +17,36 @@ span {
     white-space: nowrap;
 }
 
-.gallery {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+// .gallery {
+//     display: flex;
+//     justify-content: center;
+//     flex-wrap: wrap;
 
-    .main-img {
-        height: -webkit-fill-available;
-        margin: 10px;
-        border-radius: 12px;
-    }
-}
+//     .main-img {
+//         height: -webkit-fill-available;
+//         margin: 10px;
+//         border-radius: 12px;
+//     }
+// }
 
-.main-img-container {
-    position: relative;
-}
+// .main-img-container {
+//     position: relative;
+// }
 
-.overlay-text {
-    opacity: 0;
-    position: absolute;
-    bottom: 0;
-    text-align: center !important;
-    width: 100%;
-    color: var(--ts-accent-color1);
-    font-size: 17px;
-    letter-spacing: .2px;
-}
+// .overlay-text {
+//     opacity: 0;
+//     position: absolute;
+//     bottom: 0;
+//     text-align: center !important;
+//     width: 100%;
+//     color: var(--ts-accent-color1);
+//     font-size: 17px;
+//     letter-spacing: .2px;
+// }
 
-.main-img-container:hover .overlay-text {
-    opacity: 1;
-}
+// .content:hover .overlay-text {
+//     opacity: 1;
+// }
 
 .pop-img {
     max-height: 70vh;
@@ -68,8 +69,242 @@ span {
     opacity: 1 !important;
 }
 
-@media (max-width: 767px){
+@media (max-width: 767px) {
     .tab-heading {
         justify-content: flex-start;
+    }
+}
+
+
+
+.gallery-thumbnail {
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    border-radius: 20px;
+    height: 100%;
+}
+
+.gallery-thumbnail:hover {
+    transform: scale(1.05);
+}
+
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.lightbox-content {
+    position: relative;
+    text-align: center;
+}
+
+.lightbox-image {
+    width: 70vw;
+    height: 100vh;
+    margin: auto;
+    display: block;
+    border-radius: 60px;
+}
+
+button {
+    position: absolute;
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+    user-select: none;
+    z-index: 1001;
+}
+
+button:hover {
+    color: #f1c40f;
+}
+
+button.close {
+    top: -4%;
+    right: -17%;
+    font-size: 45px;
+}
+
+
+button.prev {
+    top: 50%;
+    left: -15%;
+    transform: translateY(-50%);
+}
+
+button.next {
+    top: 50%;
+    right: -15%;
+    transform: translateY(-50%);
+}
+
+
+@media (max-width: 767px) {
+    .gallery-thumbnail {
+        width: 100%;
+    }
+
+    .lightbox-image {
+        width: 70vw;
+        height: auto;
+        margin: auto;
+        display: block;
+        border-radius: 14px;
+    }
+
+    button.close {
+        bottom: 100%;
+        top: auto;
+    }
+}
+
+
+
+
+
+.gallery-thumbnail {
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    border-radius: 20px;
+    height: 100%;
+}
+
+.gallery-thumbnail:hover {
+    transform: scale(1.05);
+}
+
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.lightbox-content {
+    position: relative;
+    text-align: center;
+}
+
+.lightbox-image {
+    width: 70vw;
+    height: 90vh;
+    margin: auto;
+    display: block;
+    border-radius: 60px;
+}
+
+button {
+    position: absolute;
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+    user-select: none;
+    z-index: 1001;
+}
+
+button:hover {
+    color: #f1c40f;
+}
+
+button.close {
+    top: -4%;
+    right: -17%;
+    font-size: 45px;
+}
+
+
+button.prev {
+    top: 50%;
+    left: -15%;
+    transform: translateY(-50%);
+}
+
+button.next {
+    top: 50%;
+    right: -15%;
+    transform: translateY(-50%);
+}
+
+
+@media (max-width: 767px) {
+    .gallery-thumbnail {
+        width: 100%;
+    }
+
+    .lightbox-image {
+        width: 70vw;
+        height: auto;
+        margin: auto;
+        display: block;
+        border-radius: 14px;
+    }
+
+    button.close {
+        bottom: 100%;
+        top: auto;
+    }
+}
+
+
+.image-wrapper {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.overlay-text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: white;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.image-wrapper:hover .overlay-text {
+    opacity: 1;
+}
+
+
+.image-wrapper img {
+    height: -webkit-fill-available;
+    margin: 10px;
+    border-radius: 12px;
+    width: 100%;
+}
+
+
+.gallery {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    .image-wrapper img {
+        height: -webkit-fill-available;
+        margin: 10px;
+        border-radius: 12px;
+        width: 95%;
     }
 }
